fixed: hovering on a button not showing a cursor pointer

--- a/mainstyle.css
+++ b/mainstyle.css
@@ -79,3 +79,7 @@ h1.dark {
 div.dark {
     background-color: var(--dark);
 }
+
+button {
+    cursor: pointer;
+}
